--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=sistema-pos-back
 
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/GUIOR
+#spring.datasource.url=jdbc:postgresql://localhost:5432/GUIOR
+#spring.datasource.username=postgres
+#spring.datasource.password=11310598
+
 #spring.datasource.url=jdbc:postgresql://guior-1.c980sm4muhb0.us-east-2.rds.amazonaws.com/guior
-#spring.datasource.url=jdbc:postgresql://teacher-attendance.cbwau0g6wsek.us-east-1.rds.amazonaws.com:5432/Sistema_POS
-spring.datasource.username=postgres
-spring.datasource.password=11310598
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
