--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,14 @@ spring.application.name=sistema-pos-back
 
 spring.sql.init.platform=postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/GUIOR
-#spring.datasource.username=postgres
-#spring.datasource.password=11310598
+spring.datasource.url=jdbc:postgresql://localhost:5432/PRUEBA
+spring.datasource.username=postgres
+spring.datasource.password=11310598
 
 #spring.datasource.url=jdbc:postgresql://guior-1.c980sm4muhb0.us-east-2.rds.amazonaws.com/guior
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+#spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
@@ -26,8 +27,8 @@ spring.servlet.multipart.max-request-size=1000MB
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=dardoanez21@gmail.com
-spring.mail.password=ejjw qnkl gkya qvec
+spring.mail.username=j.d.guior010602@gmail.com
+spring.mail.password=mdzw spef tbvy ryea
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
